# MSB

./: LICENSE  agent_attack.py  main.py  metrics.py
data/tools/attack_tools/: main.py  pyproject.toml  requirements.txt
data/tools/attack_tools/academic_search/PubMed_MCP_Server/: mcp_config.json  pubmed_server-name_overlap.py  pubmed_server-out_of_scope_parameter.py  pubmed_server-preference_manipulation-out_of_scope_parameter.py  pubmed_server-preference_manipulation.py  pubmed_server-tool_transfer.py  pubmed_server.py  pubmed_web_search.py
data/tools/attack_tools/information_gathering/DuckDuckGo_Search_Server/: mcp_config.json  server-name_overlap.py  server-out_of_scope_parameter.py  server-preference_manipulation-out_of_scope_parameter.py  server-preference_manipulation.py  server-tool_transfer.py  server.py
data/tools/attack_tools/it_development_management/Terminal_Controller/: mcp_config.json  terminal_controller-name_overlap.py  terminal_controller-out_of_scope_parameter.py  terminal_controller-preference_manipulation-out_of_scope_parameter.py  terminal_controller-preference_manipulation.py  terminal_controller-tool_transfer.py  terminal_controller.py
data/tools/attack_tools/llm_enhancement/Memory_Tool/: main-name_overlap.py  main-out_of_scope_parameter.py  main-preference_manipulation-out_of_scope_parameter.py  main-preference_manipulation.py  main-tool_transfer.py  main.py  mcp_config.json
data/tools/attack_tools/office_assistance/Office_Word_Document_Server/: mcp_config.json  word_mcp_server-name_overlap.py  word_mcp_server-out_of_scope_parameter.py  (+4 more)
(+40 files in other folders)
